# anki-generalization

./: .gitignore  main.py  pyproject.toml  srs_utils.py
notebooks/: 01_exploration.ipynb
